

Release 0.19b (unpublished)
===========================

Docutils 0.19 is compatible with Python versions 3.7 and later.

* Support calling the "myst" parser (https://pypi.org/project/myst-docutils)
  from docutils-cli.py_.

* The default values for the "pep-references", "rfc-base-url",
  and "python-home" `configuration settings`_ now uses the "https:" scheme.

.. _configuration settings: docs/user/config.html


Release 0.18.1 (2021-12-23)
===========================

.. Note::

   Docutils 0.18.x is the last version supporting Python 2.7, 3.5, and 3.6.

* nodes.Node.traverse() returns a list again to restore backwards
  compatibility (fixes bug #431).
  Use nodes.Node.findall() to get an iterator.

* re-add module ``parsers.rst.directives.html``
  (stub, emits deprecation warning and loads
  "Meta" directive from ist new place at ``parsers.rst.directives.misc``.)

* Small bugfixes (see HISTORY_).


Release 0.18 (2021-10-26)
=========================

* Output changes:

  Identifiers:
    - During `identifier normalization`_, leading number and hyphen
      characters are no longer stripped from a `reference name`_, if the
      id_prefix_ setting is non-empty.

      Example:
        with ``--id-prefix="DU-"``, a section with title "34. May"
        currently gets the identifier key ``DU-may`` and after the
        change the identifier key ``DU-34-may``.

    - The default value for the auto_id_prefix_ setting changed to ``%``:
      "use the tag name as prefix for auto-generated IDs".
      Set auto_id_prefix_ to ``id`` for unchanged auto-IDs.

  HTML5:
    - Use the semantic tag <aside> for footnote text and citations, topics
      (except abstract and toc), admonitions, and system messages.
      Use <nav> for the Table of Contents.

    - Make "auto" table column widths the default: Only specify column
      widths, if the `"widths" option`_ is set and not "auto".
      The table-style__ setting "colwidths-grid" restores the current default.
