@@ -3,27 +3,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <!--
 This HTML is auto-generated.  DO NOT EDIT THIS FILE!  If you are writing a new
-PEP, see http://www.python.org/dev/peps/pep-0001 for instructions and links
+PEP, see http://peps.python.org/pep-0001 for instructions and links
 to templates.  DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
 -->
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=%(encoding)s" />
   <meta name="generator" content="Docutils %(version)s: https://docutils.sourceforge.io/" />
-  <title>PEP %(pep)s -- %(title)s</title>
+  <title>PEP %(pep)s - %(title)s</title>
   %(stylesheet)s
 </head>
 <body bgcolor="white">
-<table class="navigation" cellpadding="0" cellspacing="0"
-       width="100%%" border="0">
-<tr><td class="navicon" width="150" height="35">
-<a href="%(pyhome)s/" title="Python Home Page">
-<img src="%(pyhome)s/pics/PyBanner%(banner)03d.gif" alt="[Python]"
- border="0" width="150" height="35" /></a></td>
-<td class="textlinks" align="left">
-[<b><a href="%(pyhome)s/">Python Home</a></b>]
-[<b><a href="%(pepindex)s/">PEP Index</a></b>]
-[<b><a href="%(pephome)s/pep-%(pepnum)s.txt">PEP Source</a></b>]
-</td></tr></table>
+<div class="header">
+<strong>Python Enhancement Proposals</strong>
+| <a href="%(pyhome)s/">Python</a>
+&raquo; <a href="https://peps.python.org/pep-0000/">PEP Index</a>
+&raquo; PEP %(pep)s &ndash; %(title)s
+<hr class="header"/>
+</div>
 <div class="document">
 %(body)s
 %(body_suffix)s
