@@ -345,7 +345,7 @@ inline markup is also possible (although exceedingly ugly!) in \emph{re}\texttt{
 reference to the \hyperref[doctitle]{doctitle} and the \hyperref[subtitle]{subtitle}.
 
 The default role for interpreted text is \DUroletitlereference{Title Reference}.  Here are
-some explicit interpreted text roles: a PEP reference (\href{https://www.python.org/dev/peps/pep-0287}{PEP 287}); an
+some explicit interpreted text roles: a PEP reference (\href{https://peps.python.org/pep-0287}{PEP 287}); an
 RFC reference (\href{https://tools.ietf.org/html/rfc2822.html}{RFC 2822}); an abbreviation (\DUrole{abbreviation}{abb.}), an acronym
 (\DUrole{acronym}{reST}), code (\texttt{\DUrole{code}{print \textquotedbl{}hello world\textquotedbl{}}}); a \textsubscript{subscript};
 a \textsuperscript{superscript} and explicit roles for \DUroletitlereference{Docutils}'
