@@ -3,27 +3,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <!--
 This HTML is auto-generated.  DO NOT EDIT THIS FILE!  If you are writing a new
-PEP, see http://www.python.org/dev/peps/pep-0001 for instructions and links
+PEP, see http://peps.python.org/pep-0001 for instructions and links
 to templates.  DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
 -->
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="generator" content="Docutils 0.19b.dev: https://docutils.sourceforge.io/" />
-  <title>PEP 100 -- Test PEP</title>
+  <title>PEP 100 - Test PEP</title>
   <link rel="stylesheet" href="../input/data/html4css1.css" type="text/css" />
 </head>
 <body bgcolor="white">
-<table class="navigation" cellpadding="0" cellspacing="0"
-       width="100%" border="0">
-<tr><td class="navicon" width="150" height="35">
-<a href="http://www.python.org/" title="Python Home Page">
-<img src="http://www.python.org/pics/PyBanner000.gif" alt="[Python]"
- border="0" width="150" height="35" /></a></td>
-<td class="textlinks" align="left">
-[<b><a href="http://www.python.org/">Python Home</a></b>]
-[<b><a href="http://www.python.org/dev/peps/">PEP Index</a></b>]
-[<b><a href="http://www.python.org/peps/pep-0100.txt">PEP Source</a></b>]
-</td></tr></table>
+<div class="header">
+<strong>Python Enhancement Proposals</strong>
+| <a href="http://www.python.org/">Python</a>
+&raquo; <a href="https://peps.python.org/pep-0000/">PEP Index</a>
+&raquo; PEP 100 &ndash; Test PEP
+<hr class="header"/>
+</div>
 <div class="document">
 <table class="rfc2822 docutils field-list" frame="void" rules="none">
 <col class="field-name" />
@@ -45,7 +41,7 @@ to templates.  DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
 </tr>
 <tr class="field"><th class="field-name">Type:</th><td class="field-body">Standards Track</td>
 </tr>
-<tr class="field"><th class="field-name">Content-Type:</th><td class="field-body"><a class="reference external" href="https://www.python.org/dev/peps/pep-0012">text/x-rst</a></td>
+<tr class="field"><th class="field-name">Content-Type:</th><td class="field-body"><a class="reference external" href="https://peps.python.org/pep-0012">text/x-rst</a></td>
 </tr>
 <tr class="field"><th class="field-name">Created:</th><td class="field-body">01-Jun-2001</td>
 </tr>
