@@ -185,7 +185,7 @@ inline markup is also possible (although exceedingly ugly!) in <em>re</em><tt cl
 (generated by processing errors; this one is intentional).  Here is a
 reference to the <a class="reference internal" href="#doctitle">doctitle</a> and the <a class="reference internal" href="#subtitle">subtitle</a>.</p>
 <p>The default role for interpreted text is <cite>Title Reference</cite>.  Here are
-some explicit interpreted text roles: a PEP reference (<a class="reference external" href="https://www.python.org/dev/peps/pep-0287">PEP 287</a>); an
+some explicit interpreted text roles: a PEP reference (<a class="reference external" href="https://peps.python.org/pep-0287">PEP 287</a>); an
 RFC reference (<a class="reference external" href="https://tools.ietf.org/html/rfc2822.html">RFC 2822</a>); an abbreviation (<abbr>abb.</abbr>), an acronym
 (<acronym>reST</acronym>), code (<code>print &quot;hello world&quot;</code>); a <sub>subscript</sub>;
 a <sup>superscript</sup> and explicit roles for <cite>Docutils</cite>'
