@@ -505,7 +505,7 @@
                         Title Reference
                     .  Here are
                     some explicit interpreted text roles: a PEP reference (
-                    <reference refuri="https://www.python.org/dev/peps/pep-0287">
+                    <reference refuri="https://peps.python.org/pep-0287">
                         PEP 287
                     ); an
                     RFC reference (
